--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
         <a href="viratkohli.html" class="page-link">Virat Kohli</a>
         <a href="Indian%20Cricket%20Team.html" class="page-link">Indian Cricket Team</a>
            <a href="chess.html" class="page">Chess</a>
+           <a href="magnuscarlsenthegoat?" class="page">Magnus Carlsen</>
     </div>
     <footer class="footer">
         <p>© 2025 Cricket World. All rights reserved.</p>
