--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
             padding: 10px;
             width: 100%;
             margin-top: 20px;
+
+            
         }
     </style>
 </head>
@@ -138,10 +140,7 @@
         <a href="viratkohli.html" class="page-link">Virat Kohli</a>
         <a href="Indian%20Cricket%20Team.html" class="page-link">Indian Cricket Team</a>
            <a href="chess.html" class="page">Chess</a>
-           <a href="magnuscarlsenthegoat?" class="page">Magnus Carlsen</>
+           <a href="magnuscarlsen.html" class="page">Magnus Carlsen</>
     </div>
-    <footer class="footer">
-        <p>© 2025 Cricket World. All rights reserved.</p>
-    </footer>
 </body>
 </html>
