--- a/magnuscarlsen.html
+++ b/magnuscarlsen.html
@@ -52,6 +52,12 @@
             padding: 10px;
             width: 100%;
             margin-top: 20px;
+               a:hover {
+            background: linear-gradient(145deg, #e2e2e2, #f3f3f3);
+            color: #005bb5;
+            transform: translateY(-2px);
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2), 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
         }
     </style>
 </head>
