--- a/chess.html
+++ b/chess.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,18 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chess: The Game of Kings</title>
     <style>
+        :root {
+            --bg-gradient: linear-gradient(90deg, #1e3c72, #2a5298);
+            --bg-content: rgba(0, 0, 0, 0.8);
+            --text-color: #ffffff;
+            --header-bg: linear-gradient(45deg, #000000, #333333);
+            --button-bg: #00c6ff;
+            --button-hover: #0080c6;
+            --footer-bg: #121212;
+            --footer-text: #888888;
+        }
+
+        [data-theme="light"] {
+            --bg-gradient: #f9f9f9;
+            --bg-content: #ffffff;
+            --text-color: #000000;
+            --header-bg: #e0e0e0;
+            --button-bg: #007bff;
+            --button-hover: #0056b3;
+            --footer-bg: #f1f1f1;
+            --footer-text: #555555;
+        }
+
         body {
-            background: linear-gradient(90deg, #1e3c72, #2a5298);
-            color: #ffffff;
+            background: var(--bg-gradient);
+            color: var(--text-color);
             font-family: 'Arial', sans-serif;
             line-height: 1.8;
             margin: 0;
             padding: 0;
+            transition: background 0.3s, color 0.3s;
         }
 
         header {
-            background: linear-gradient(45deg, #000000, #333333);
-            color: #ffffff;
+            background: var(--header-bg);
+            color: var(--text-color);
             text-align: center;
             padding: 30px 20px;
         }
@@ -33,21 +55,36 @@
             max-width: 1100px;
             margin: 30px auto;
             padding: 20px;
-            background: rgba(0, 0, 0, 0.8);
+            background: var(--bg-content);
             border-radius: 10px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            transition: background 0.3s;
+        }
+
+        .video-container {
+            text-align: center;
+            margin: 20px 0;
+        }
+
+        .video-container iframe {
+            width: 100%;
+            max-width: 800px;
+            height: 450px;
+            border: none;
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
         }
 
         h3 {
             font-size: 1.8rem;
-            color: #00c6ff;
+            color: var(--button-bg);
             text-transform: uppercase;
             margin-top: 30px;
         }
 
         p, ul {
             font-size: 1.2rem;
-            color: #ffffff;
+            color: var(--text-color);
             margin-bottom: 20px;
         }
 
@@ -63,8 +100,8 @@
             display: inline-block;
             margin: 10px 0;
             padding: 10px 20px;
-            background: #00c6ff;
-            color: #ffffff;
+            background: var(--button-bg);
+            color: var(--text-color);
             border: none;
             border-radius: 5px;
             font-size: 1rem;
@@ -73,21 +110,31 @@
         }
 
         button:hover {
-            background: #0080c6;
+            background: var(--button-hover);
             transform: scale(1.05);
         }
 
         .footer {
-            background-color: #121212;
+            background-color: var(--footer-bg);
             text-align: center;
             padding: 15px;
             margin-top: 30px;
-            color: #888888;
+            color: var(--footer-text);
             font-size: 0.9rem;
         }
 
         .footer p {
             margin: 0;
+        }
+
+        .champion {
+            margin-top: 20px;
+        }
+
+        .theme-toggle {
+            position: fixed;
+            top: 20px;
+            right: 20px;
         }
     </style>
 </head>
@@ -96,31 +143,64 @@
         <h1>Chess: The Game of Kings</h1>
     </header>
 
+    <button class="theme-toggle" onclick="toggleTheme()">Toggle Theme</button>
+
     <div class="content">
+        <!-- Video Section -->
+        <div class="video-container">
+            <h3>Learn Chess: A Beginner's Guide</h3>
+            <iframe 
+                src="https://www.youtube.com/embed/NAIQyoPcjNM" 
+                title="Learn Chess: A Beginner's Guide" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+            </iframe>
+        </div>
+
         <h3>World Chess Champions</h3>
-        <p>Click on any chess champion below to learn more:</p>
-        <ul>
-            <li>Wilhelm Steinitz (1886–1894) <button onclick="location.href='wilhelm-steinitz.html'">Learn More</button></li>
-            <li>Emanuel Lasker (1894–1921) <button onclick="location.href='emanuel-lasker.html'">Learn More</button></li>
-            <li>Jose Raul Capablanca (1921–1927) <button onclick="location.href='jose-capablanca.html'">Learn More</button></li>
-            <li>Alexander Alekhine (1927–1935, 1937–1946) <button onclick="location.href='alexander-alekhine.html'">Learn More</button></li>
-            <li>Max Euwe (1935–1937) <button onclick="location.href='max-euwe.html'">Learn More</button></li>
-            <li>Mikhail Botvinnik (1948–1957, 1958–1960) <button onclick="location.href='mikhail-botvinnik.html'">Learn More</button></li>
-            <li>Vasily Smyslov (1957–1958) <button onclick="location.href='vasily-smyslov.html'">Learn More</button></li>
-            <li>Mikhail Tal (1960–1961) <button onclick="location.href='mikhail-tal.html'">Learn More</button></li>
-            <li>Tigran Petrosian (1963–1969) <button onclick="location.href='tigran-petrosian.html'">Learn More</button></li>
-            <li>Boris Spassky (1969–1972) <button onclick="location.href='boris-spassky.html'">Learn More</button></li>
-            <li>Bobby Fischer (1972–1975) <button onclick="location.href='bobby-fischer.html'">Learn More</button></li>
-            <li>Anatoly Karpov (1975–1985) <button onclick="location.href='anatoly-karpov.html'">Learn More</button></li>
-            <li>Garry Kasparov (1985–2000) <button onclick="location.href='garry-kasparov.html'">Learn More</button></li>
-            <li>Vladimir Kramnik (2000–2007) <button onclick="location.href='vladimir-kramnik.html'">Learn More</button></li>
-            <li>Viswanathan Anand (2007–2013) <button onclick="location.href='viswanathan-anand.html'">Learn More</button></li>
-            <li>Magnus Carlsen (2013–Present) <button onclick="location.href='magnus-carlsen.html'">Learn More</button></li>
-        </ul>
+
+        <div class="champion">
+            <h4>Wilhelm Steinitz (1886–1894)</h4>
+            <p>Wilhelm Steinitz was the first official World Chess Champion and is often referred to as the father of modern chess. His innovative strategies revolutionized the way chess was played, shifting the focus to positional play and long-term planning.</p>
+            <p>During his reign, Steinitz established a new standard of excellence in chess, and his contributions laid the groundwork for the strategic principles that are widely used today. His influence on the game remains unparalleled.</p>
+        </div>
+
+        <div class="champion">
+            <h4>Emanuel Lasker (1894–1921)</h4>
+            <p>Emanuel Lasker held the World Chess Champion title for an incredible 27 years, the longest reign in chess history. Known for his psychological approach to the game, Lasker had an uncanny ability to adapt his playstyle to his opponents.</p>
+            <p>Aside from chess, Lasker was a mathematician and philosopher, and he published numerous works on the subject. His unique perspective on chess as a mental battle elevated the game to a new intellectual level.</p>
+        </div>
+
+        <div class="champion">
+            <h4>Jose Raul Capablanca (1921–1927)</h4>
+            <p>Known as the "Chess Machine," Jose Raul Capablanca was celebrated for his natural talent and effortless style of play. He rarely studied openings yet managed to dominate his opponents with precision and simplicity.</p>
+            <p>Capablanca's contributions to endgame theory and his remarkable ability to convert small advantages into victories have earned him a permanent place in chess history. He remains one of the most admired champions.</p>
+        </div>
+
+        <div class="champion">
+            <h4>Alexander Alekhine (1927–1935, 1937–1946)</h4>
+            <p>Alexander Alekhine was known for his aggressive and imaginative playing style. He was the first champion to extensively study his opponents' games, giving him a significant edge during matches.</p>
+            <p>His contributions to opening theory and his extraordinary tactical prowess are legendary. Alekhine's games are studied even today for their creativity and brilliance.</p>
+        </div>
+
+        <div class="champion">
+            <h4>Bobby Fischer (1972–1975)</h4>
+            <p>Bobby Fischer was an American prodigy who captured the world’s attention with his unparalleled talent. His victory in 1972 against Boris Spassky in the "Match of the Century" marked a turning point in chess history.</p>
+            <p>Fischer's contributions to opening theory, endgames, and chess culture as a whole remain significant, and his influence on the game is still felt.</p>
+        </div>
     </div>
 
     <footer class="footer">
         <p>© 2025 Chess World. All rights reserved.</p>
     </footer>
+
+    <script>
+        function toggleTheme() {
+            const body = document.body;
+            const currentTheme = body.getAttribute('data-theme');
+            const newTheme = currentTheme === 'light' ? 'dark' : 'light';
+            body.setAttribute('data-theme', newTheme);
+        }
+    </script>
 </body>
 </html>
