--- a/chess.html
+++ b/chess.html
@@ -143,7 +143,7 @@
         <h1>Chess: The Game of Kings</h1>
     </header>
 
-    <button class="theme-toggle" onclick="toggleTheme()">Toggle Theme</button>
+    <button class="theme-toggle" onclick="toggleTheme()">Dark/Light Mode/</button>
 
     <div class="content">
         <!-- Video Section -->
