--- a/chess.html
+++ b/chess.html
@@ -202,5 +202,9 @@
             body.setAttribute('data-theme', newTheme);
         }
     </script>
+Button class="button" (index.htmk)">Home<
+    Button class="button" (viratkohli.htmk)">Virat Kohli<
+                                                            Button class="button" (magnuscarlsen.htmk)">Magnus Carlsen<
+                                                                                                                          Button class="button" (Indian Cricket Team.htmk)">Indian Cricket Team<
 </body>
 </html>
