--- a/Indian Cricket Team.html
+++ b/Indian Cricket Team.html
@@ -8,7 +8,7 @@
         body {
             background-color: #f5f5f5;
             color: #000000;
-            font-family: 'Times New Roman', Georgia, serif;
+            font-family: 'Montserrat', sans-serif;'
             line-height: 1.6;
             margin: 0;
             padding: 0;
