--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cricket</title>
     <style>
-        body {
+         body {
             background-color: #f5f5f5;
             color: #000000;
-            font-family: 'Times New Roman', Georgia, serif;
+            font-family: 'Montserrat', sans-serif;'
             line-height: 1.6;
             margin: 0;
             padding: 0;
