--- a/viratkohli.html
+++ b/viratkohli.html
@@ -8,14 +8,13 @@
         body {
             background-color: #f5f5f5;
             color: #000000;
-            font-family: 'Times New Roman', Georgia, serif;
+            font-family: 'Montserrat', sans-serif;'
             line-height: 1.6;
             margin: 0;
             padding: 0;
             box-sizing: border-box;
             transition: background-color 0.5s ease, color 0.5s ease;
         }
-
         header {
             background-color: #ff0000;
             color: #fff;
