--- a/chess.html
+++ b/chess.html
@@ -202,6 +202,11 @@
             body.setAttribute('data-theme', newTheme);
         }
     </script>
+     <!-- Add links with proper formatting -->
+        <a href="viratkohli.html" class="animated button">Virat Kohli</a>
+        <a href="Indian%20Cricket%20Team.html" class="animated button">Indian Cricket Team</a>
+           <a href="index.html.html" class="animated button">Home</a>
+           <a href="magnuscarlsen.html" class="animated button">Magnus Carlsen</>
 </body>
 </html>
 
