--- a/chess.html
+++ b/chess.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chess: CHESS</title>
+    <title>The Facinating Game:Chess</title>
     <style>
         :root {
             --bg-gradient: linear-gradient(90deg, #1e3c72, #2a5298);
