--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
          body {
             background-color: #f5f5f5;
             color: #000000;
-            font-family: 'Montserrat', sans-serif;'
+            font-family: 'Montserrat', Montserrat;'
             line-height: 1.6;
             margin: 0;
             padding: 0;
@@ -62,7 +62,7 @@
 
         .footer {
             background-color: #222;
-            color: #fff;
+            color: #039dfc;
             text-align: center;
             padding: 10px;
             width: 100%;
