--- a/viratkohli.html
+++ b/viratkohli.html
@@ -8,13 +8,14 @@
         body {
             background-color: #f5f5f5;
             color: #000000;
-            font-family: 'Montserrat', sans-serif;'
+            font-family: 'Montserrat', sans-serif;
             line-height: 1.6;
             margin: 0;
             padding: 0;
             box-sizing: border-box;
             transition: background-color 0.5s ease, color 0.5s ease;
         }
+
         header {
             background-color: #ff0000;
             color: #fff;
@@ -24,8 +25,9 @@
         }
 
         header h1 {
-            font-size: 3rem;
+            font-size: 4rem;
             margin: 0;
+            font-weight: 700; /* Bold font for header */
         }
 
         .content {
@@ -35,35 +37,43 @@
             background: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
-            transition: background-color 0.5s ease;
         }
 
-        img {
-            display: block;
-            margin: 20px auto;
-            max-width: 100%;
-            height: auto;
-            border-radius: 8px;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        h3 {
+            font-size: 1.8rem;
+            font-weight: 700; /* Bold font for subtitles */
+            margin-top: 1.5rem;
+            color: #333;
         }
 
-        img:hover {
-            transform: scale(1.05);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-        }
-
-        h3, p {
+        p {
             font-size: 1rem;
-            transition: color 0.5s ease;
+            margin: 1rem 0;
+            color: #555;
+            font-weight: 400; /* Normal font for body text */
         }
 
-        .footer {
-            background-color: #222;
-            color: #fff;
+        a {
+            display: inline-block;
+            padding: 12px 25px;
+            background: linear-gradient(145deg, #f3f3f3, #e2e2e2);
+            color: #007aff;
+            font-size: 1rem;
             text-align: center;
-            padding: 10px;
-            width: 100%;
-            margin-top: 20px;
+            text-decoration: none;
+            border-radius: 30px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.06);
+            transition: all 0.3s ease;
+            border: 1px solid #d1d1d1;
+            margin: 10px 0;
+            font-family: 'Montserrat', sans-serif;
+        }
+
+        a:hover {
+            background: linear-gradient(145deg, #e2e2e2, #f3f3f3);
+            color: #005bb5;
+            transform: translateY(-2px);
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2), 0 2px 5px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
