--- a/viratkohli.html
+++ b/viratkohli.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Virat Kohli</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
         body {
             background-color: #f5f5f5;
             color: #000000;
@@ -27,7 +29,8 @@
         header h1 {
             font-size: 4rem;
             margin: 0;
-            font-weight: 700; /* Bold font for header */
+            font-weight: 700;
+            font-family: 'Montserrat', sans-serif;
         }
 
         .content {
@@ -41,39 +44,32 @@
 
         h3 {
             font-size: 1.8rem;
-            font-weight: 700; /* Bold font for subtitles */
+            font-weight: 700;
             margin-top: 1.5rem;
             color: #333;
+            font-family: 'Montserrat', sans-serif;
         }
 
         p {
             font-size: 1rem;
             margin: 1rem 0;
             color: #555;
-            font-weight: 400; /* Normal font for body text */
-        }
-
-        a {
-            display: inline-block;
-            padding: 12px 25px;
-            background: linear-gradient(145deg, #f3f3f3, #e2e2e2);
-            color: #007aff;
-            font-size: 1rem;
-            text-align: center;
-            text-decoration: none;
-            border-radius: 30px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.06);
-            transition: all 0.3s ease;
-            border: 1px solid #d1d1d1;
-            margin: 10px 0;
+            font-weight: 400;
             font-family: 'Montserrat', sans-serif;
         }
 
-        a:hover {
-            background: linear-gradient(145deg, #e2e2e2, #f3f3f3);
-            color: #005bb5;
-            transform: translateY(-2px);
-            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2), 0 2px 5px rgba(0, 0, 0, 0.1);
+        img {
+            width: 100%;
+            height: auto;
+            display: block;
+            margin: 20px 0;
+            border-radius: 8px;
+            transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+        }
+
+        img:hover {
+            transform: scale(1.05);
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
@@ -84,28 +80,47 @@
 
     <div class="content">
         <img src="https://i.pinimg.com/736x/46/6b/ee/466bee8721d70384b99041c0b108339f.jpg" alt="Virat Kohli">
-        <h3>About Virat Kohli</h3>
+        
+        <h3>Early Life and Childhood</h3>
         <p>
-            Virat Kohli, often hailed as one of the greatest cricketers of the modern era, has left an indelible mark on the world of cricket with his exceptional talent, unparalleled work ethic, and an insatiable hunger for success. Born on November 5, 1988, in Delhi, India, Kohli’s journey from a young boy with big dreams to the captain of the Indian cricket team is a story of sheer determination and passion.
+            Virat Kohli was born on November 5, 1988, in Delhi, India. From a young age, he showed a keen interest in cricket, often picking up a bat and practicing for hours. His father, Prem Kohli, recognized his son's talent and enrolled him at the West Delhi Cricket Academy when he was just nine years old. Under the guidance of coach Rajkumar Sharma, Kohli honed his skills and developed into a promising young cricketer.
             <br><br>
-            Kohli burst onto the international scene in 2008, leading the Indian U-19 team to victory in the ICC U-19 Cricket World Cup. His transition to the senior team was seamless, and he quickly established himself as a dependable batsman in all formats of the game. Known for his aggressive batting style and ability to chase down daunting targets, Kohli became the backbone of India’s batting lineup.
+            Kohli's journey was not without hardships. The sudden passing of his father in 2006 was a significant personal setback, but instead of letting grief hold him back, he used it as motivation to push himself harder. His commitment to the game was evident when he chose to play a crucial Ranji Trophy match for Delhi just a day after his father's demise.
+        </p>
+
+        <h3>Personal Life</h3>
+        <p>
+            In 2017, Kohli married Bollywood actress Anushka Sharma in an intimate ceremony in Italy. Their relationship has been admired by fans as a symbol of mutual support and understanding. The couple welcomed their daughter, Vamika, in 2021, adding another beautiful chapter to Kohli's personal life.
             <br><br>
-            Over the years, Kohli has broken numerous records, including being the fastest player to score 8,000, 9,000, 10,000, and 11,000 runs in One Day Internationals (ODIs). His consistency in scoring centuries, especially in run chases, earned him the nickname "Chase Master." As a captain, Kohli brought a new level of intensity and professionalism to the Indian team, emphasizing fitness and a never-say-die attitude.
+            Beyond cricket, Kohli is a fitness enthusiast who has transformed himself into one of the fittest athletes in the world. His dedication to diet, exercise, and an overall disciplined lifestyle has set new benchmarks for cricketers globally.
+        </p>
+
+        <h3>Playing Style and Strengths</h3>
+        <p>
+            Kohli's batting style is a perfect blend of aggression and technical finesse. He is known for his impeccable cover drives, quick footwork, and ability to build innings under pressure. His hunger for runs and incredible consistency have made him a nightmare for bowlers across all formats.
             <br><br>
-            Kohli’s cricketing achievements are unparalleled. He has amassed over 25,000 runs in international cricket, including more than 70 centuries across formats. His ability to perform under pressure has made him a legend of the game. In Tests, he has played several memorable innings, including a double century against the West Indies and a masterful 254 not out against South Africa. His exploits in ODIs are equally impressive, with unforgettable performances such as his 183 against Pakistan in the Asia Cup and a series of hundreds in Australia.
+            One of Kohli’s defining traits is his ability to chase down targets in One Day Internationals (ODIs). His unmatched ability to read the game, rotate the strike, and accelerate when needed has made him one of the best chase masters in cricket history.
+        </p>
+
+        <h3>Legacy and Achievements</h3>
+        <p>
+            Over the years, Kohli has accumulated numerous records. He is the fastest batsman to score 8,000, 9,000, 10,000, and 11,000 runs in ODIs. His leadership saw India achieve historic victories, including their first-ever Test series win in Australia in 2018-19.
             <br><br>
-            As a leader, Kohli transformed the Indian Test team into a formidable unit. Under his captaincy, India achieved its first-ever Test series victory in Australia in 2018-19. Kohli’s leadership was characterized by his aggressive approach, strategic acumen, and the ability to inspire his teammates to perform at their best. His tenure as captain also saw India dominate the ICC Test rankings for several years.
+            Kohli’s impact on Indian cricket extends beyond statistics. His work ethic, fitness standards, and aggressive approach to the game have influenced an entire generation of cricketers. Even after stepping down as captain, his presence in the team remains invaluable.
+        </p>
+
+        <h3>Off the Field: Philanthropy and Business Ventures</h3>
+        <p>
+            Kohli is actively involved in social causes and philanthropy. Through the Virat Kohli Foundation, he has contributed to various initiatives aimed at helping underprivileged children and promoting sports in India.
             <br><br>
-            Off the field, Kohli is a global icon. His popularity extends far beyond cricket, as he has become a brand ambassador for numerous causes and products. Kohli is a vocal advocate for fitness and healthy living, often sharing his workout routines and diet tips with fans. He has also ventured into entrepreneurship, launching his own clothing line and investing in fitness-related ventures.
-            <br><br>
-            Kohli’s journey has not been without challenges. The loss of his father at a young age was a defining moment in his life. Despite the personal tragedy, Kohli’s determination to succeed never wavered. His ability to overcome adversity and rise to the top of the cricketing world is a testament to his resilience and mental strength.
-            <br><br>
-            Beyond cricket, Kohli is a philanthropist who is deeply committed to giving back to society. Through the Virat Kohli Foundation, he supports underprivileged children and promotes sports in India. His efforts to make a difference off the field have earned him widespread admiration and respect.
-            <br><br>
-            Today, Virat Kohli continues to inspire millions of fans around the world. His passion for the game, relentless pursuit of excellence, and dedication to his craft have made him a role model for aspiring cricketers. Kohli’s impact on the game of cricket is immeasurable, and his legacy as one of the greatest players of all time is firmly established.
-            <br><br>
-            Whether it’s his breathtaking cover drives, his fiery celebrations, or his unwavering focus on the field, Kohli embodies the spirit of modern cricket. As he continues to play and inspire, his journey serves as a reminder that with hard work, perseverance, and a never-give-up attitude, anything is possible.
+            Apart from philanthropy, Kohli has made significant investments in fitness and lifestyle brands. His clothing line, Wrogn, and involvement in multiple business ventures show his entrepreneurial mindset.
+        </p>
+
+        <h3>Conclusion</h3>
+        <p>
+            Virat Kohli is not just a cricketer; he is an inspiration to millions worldwide. His dedication, discipline, and ability to overcome challenges have made him one of the greatest players in cricket history. Whether it is his on-field aggression, unmatched consistency, or off-field contributions, Kohli’s legacy is cemented as a modern legend of the game.
         </p>
     </div>
 </body>
 </html>
+
